--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,15 +6,23 @@ body {
   text-align: center;
 }
 
-h1 {
+h1, h2, p {
   font-family: Verdana;
+}
+
+h1 {
   font-weight: normal;
   font-size:50px;
   color: white;
 }
 
 h2 {
-  font-family: Verdana;
+  font-weight: 300;
+  font-size:42px;
+  color: white;
+}
+
+p {
   font-size:21px;
   color: grey;
 }
